# Natron

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis-coverity-scan-build.sh  .travis.yml  BUGS.md  BUGS.txt  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.txt  INSTALL_FREEBSD.md  INSTALL_LINUX.md  INSTALL_LINUX.txt  INSTALL_MACOS.md  INSTALL_OSX.md  INSTALL_OSX.txt  INSTALL_WINDOWS.md  INSTALL_WINDOWS.txt  LATEST_VERSION.txt  LATEST_VERSION_README.txt  LICENSE_SHORT.txt  Natron-bonalex01dev-QtCreator.files  Natron-bonalex01dev-QtCreator.includes  Natron-namespace.patch  Natron.pro  Natron.rc  Natron.spec  OpenColorIO-Configs-README.md  OpenColorIO-Configs.pri  Powiter.pro  Project.pro  README.md  README.txt  README_breakpad.md  Resources.qrc  breakpadclient.pri  (+17 more)
App/: .gitignore  App.pro  App.pro.autosave  CMakeLists.txt  Natron.pro  Natron.vcxproj.filters  NatronApp_main.cpp  NatronDyLd.c  NatronInfo.plist  NatronInfo.plist.in  main.cpp
App/Natron-bin.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Engine/: AbortableRenderInfo.cpp  AbortableRenderInfo.h  AbstractCache.cpp  AbstractCache.h  AddPlaneNode.cpp  AddPlaneNode.h  AfterQuitProcessingI.h  AnimatingObjectI.cpp  AnimatingObjectI.h  AppInstance.cpp  AppInstance.h  AppInstanceWrapper.cpp  AppInstanceWrapper.h  AppManager.cpp  AppManager.h  AppManagerPrivate.cpp  AppManagerPrivate.h  BackDrop.cpp  BackDrop.h  Backdrop.cpp  Backdrop.h  Bezier.cpp  Bezier.h  BezierCP.cpp  BezierCP.h  BezierCPPrivate.h  BezierCPSerialization.h  BezierSerialization.h  BlockingBackgroundRender.cpp  BlockingBackgroundRender.h  Box.cpp  Box.h  BufferableObject.h  CLArgs.cpp  CLArgs.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheDeleterThread.cpp  CacheDeleterThread.h  (+538 more)
Engine/NatronEngine/: animatedparam_wrapper.cpp  animatedparam_wrapper.h  app_wrapper.cpp  app_wrapper.h  appsettings_wrapper.cpp  appsettings_wrapper.h  beziercurve_wrapper.cpp  beziercurve_wrapper.h  booleanparam_wrapper.cpp  booleanparam_wrapper.h  boolnodecreationproperty_wrapper.cpp  boolnodecreationproperty_wrapper.h  buttonparam_wrapper.cpp  buttonparam_wrapper.h  choiceparam_wrapper.cpp  choiceparam_wrapper.h  colorparam_wrapper.cpp  colorparam_wrapper.h  colortuple_wrapper.cpp  colortuple_wrapper.h  double2dparam_wrapper.cpp  double2dparam_wrapper.h  double2dtuple_wrapper.cpp  double2dtuple_wrapper.h  double3dparam_wrapper.cpp  double3dparam_wrapper.h  double3dtuple_wrapper.cpp  double3dtuple_wrapper.h  doubleparam_wrapper.cpp  doubleparam_wrapper.h  effect_wrapper.cpp  effect_wrapper.h  exprutils_wrapper.cpp  fileparam_wrapper.cpp  fileparam_wrapper.h  floatnodecreationproperty_wrapper.cpp  floatnodecreationproperty_wrapper.h  group_wrapper.cpp  group_wrapper.h  groupparam_wrapper.cpp  (+77 more)
Engine/NatronGui/: guiapp_wrapper.cpp  natrongui_module_wrapper.cpp  natrongui_python.h
Engine/Qt4/NatronEngine/: animatedparam_wrapper.cpp  animatedparam_wrapper.h  app_wrapper.cpp  app_wrapper.h  appsettings_wrapper.cpp  beziercurve_wrapper.cpp  beziercurve_wrapper.h  booleanparam_wrapper.cpp  boolnodecreationproperty_wrapper.cpp  buttonparam_wrapper.cpp  buttonparam_wrapper.h  choiceparam_wrapper.cpp  choiceparam_wrapper.h  colorparam_wrapper.cpp  colortuple_wrapper.cpp  (+58 more)
Gui/: AboutWindow.cpp  AboutWindow.h  ActionShortcuts.cpp  ActionShortcuts.h  AddKnobDialog.cpp  AddKnobDialog.h  AnimItemBase.cpp  AnimItemBase.h  AnimatedCheckBox.cpp  AnimatedCheckBox.h  AnimationButton.cpp  AnimationButton.h  AnimationModule.cpp  AnimationModule.h  AnimationModuleBase.cpp  AnimationModuleBase.h  AnimationModuleEditor.cpp  AnimationModuleEditor.h  AnimationModuleEditorUndoRedo.cpp  AnimationModuleEditorUndoRedo.h  AnimationModuleSelectionModel.cpp  AnimationModuleSelectionModel.h  AnimationModuleTreeView.cpp  AnimationModuleTreeView.h  AnimationModuleUndoRedo.cpp  AnimationModuleUndoRedo.h  AnimationModuleView.cpp  AnimationModuleView.h  AnimationModuleViewBase.cpp  AnimationModuleViewBase.h  AnimationModuleViewCurveWidget.cpp  AnimationModuleViewCurveWidgetPrivate.cpp  AnimationModuleViewDopeSheet.cpp  AnimationModuleViewPrivate.cpp  AnimationModuleViewPrivate.h  AnimationModuleViewPrivateBase.cpp  AnimationModuleViewPrivateBase.h  AutoHideToolBar.cpp  AutoHideToolBar.h  BackDropGui.cpp  (+450 more)
Gui/NatronGui/: guiapp_wrapper.cpp  guiapp_wrapper.h  natrongui_module_wrapper.cpp  natrongui_python.h  pyguiapplication_wrapper.cpp  pyguiapplication_wrapper.h  pymodaldialog_wrapper.cpp  pymodaldialog_wrapper.h  pypanel_wrapper.cpp  pypanel_wrapper.h  pytabwidget_wrapper.cpp  pytabwidget_wrapper.h  pyviewer_wrapper.cpp  pyviewer_wrapper.h
Gui/sass/: global.sass  main.sass  palette.sass
HostSupport/: CMakeLists.txt  HostSupport.pro  pch.h
Renderer/: CMakeLists.txt  NatronRenderer_main.cpp  Renderer.pro
Renderer/NatronRenderer-bin.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Renderer/NatronRenderer.xcodeproj/: project.pbxproj  qt_makeqmake.mak  qt_preprocess.mak
Tests/: BaseTest.cpp  BaseTest.h  CMakeLists.txt  Curve_Test.cpp  FileSystemModel_Test.cpp  File_Knob_Test.cpp  Hash64_Test.cpp  Image_Test.cpp  KnobFile_Test.cpp  Lut_Test.cpp  OSGLContext_Test.cpp  OfxEffectInstance_Mock.cpp  OfxEffectInstance_Mock.h  Tests.pro  Tests.pro.autosave  Tracker_Test.cpp  wmain.cpp
Tests/Engine_Tests/: BaseTest.cpp  BaseTest.h  Engine_Tests.pro  main.cpp
libs/ceres/: CMakeLists.txt  README.Natron  ceres-Natron.patch  ceres.pro
libs/gflags/: CMakeLists.txt  README.Natron  gflags.pro
libs/glog/: CMakeLists.txt  README.Natron  glog-Natron.patch  glog.pro
libs/hoedown/: CMakeLists.txt  Makefile.orig  Makefile.win.orig  README.Natron  README.md  hoedown.def  hoedown.pro  html_block_names.gperf
libs/libmv/: CMakeLists.txt  README.Natron  libmv-readme.natron  libmv.pro
libs/libtess/: CMakeLists.txt  README.natron.md  gluos.h  libtess-natron.patch  libtess.h  libtess.pro  libtess_internal.h  mesh.h  priorityq-heap.c  tess.h
libs/openMVG/: CMakeLists.txt  README.Natron  openMVG.pro  openmvg-readme.natron
(+6410 files in other folders)
